Created header block

--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-display: swap;
   font-family: 'PTSans';
-  src: url('../fonts/PTSansPro-Regular.woff2') format('woff');
+  src: url('../fonts/PTSansPro-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
@@ -9,7 +9,7 @@
 @font-face {
   font-display: swap;
   font-family: 'PTSans';
-  src: url('../fonts/PTSansPro-Bold.woff2') format('woff');
+  src: url('../fonts/PTSansPro-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
