--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -1,5 +1,5 @@
 .btn {
-  height: 40px;
+  height: 34px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -15,112 +15,21 @@
 }
 
 .btn-primary {
-  height: 31px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  border-width: 0;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-  background-color: transparent;
-  transition: color .5s, border .5s;
-
-  &::before,
-  &::after {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    z-index: -1;
-    transition: opacity .5s ease;
-    content: '';
-  }
-
-  &::before {
-    background-color: #fff;
-    border: 1px solid $red;
-    border-radius: inherit;
-  }
-
-  &::after {
-    background: linear-gradient(180deg, $red2 0%, $red 100%);
-  }
-}
-
-.btn-secondary {
-  position: relative;
-  overflow: hidden;
-  border-width: 0;
-  z-index: 1;
-  transition: color .5s, border .5s;
-
-  &::before,
-  &::after {
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: absolute;
-    z-index: -1;
-    transition: opacity .5s ease;
-    content: '';
-  }
-
-  &::before {
-    background-color: #fff;
-    border: 1px solid #303030;
-    border-radius: inherit;
-  }
-
-  &::after {
-    background: linear-gradient(180deg, #494949 0%, #262626 100%);
-  }
-
-  &:not(:disabled):not(.disabled):active {
-    color: $red;
-    background-color: #fff;
-    border-color: $red;
-  }
-}
-
-.btn-grey {
-  height: 32px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  border-color: transparent;
-  position: relative;
-  font-size: 14px;
-  overflow: hidden;
-  z-index: 1;
-  background: linear-gradient(180deg, $gray 0, $gray2 100%);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-transform: uppercase;
+  border-color: $gray-900;
+  background-color: $gray-900;
 }
 
 @media (min-width: 1100px) {
-  .btn {
-    min-width: 200px;
-  }
-  .btn:hover::after {
-    opacity: 0;
-  }
-  .btn-primary:hover {
-    color: $red;
-  }
-  .btn-grey:hover {
-    color: #fff;
-  }
-}
-
-@media (min-width: 576px) {
   .btn-primary {
-    height: 40px;
-    padding-top: 7px;
-    padding-bottom: 7px;
-  }
-}
+    transition: background-color .4s, border .4s;
 
-@media (max-width: 575px) {
-  .btn {
-    font-size: 13px;
+    &:hover {
+      background-color: $orange;
+      border-color: $orange;
+      color: #fff;
+    }
   }
 }
