--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -1,3 +1,7 @@
+body {
+  background: url(../img/bg.svg) repeat #efefef;
+}
+
 h1, .h1, h2, .h2, h3, .h3,
 h4, .h4, h5, .h5, h6, .h6 {
   color: $black;
@@ -65,7 +69,7 @@ a:focus {
 }
 
 .text-bold {
-  font-weight: 500;
+  font-weight: 700;
   color: $black;
 }
 
