Created main-info block

--- a/src/styles/modules/_menu.scss
+++ b/src/styles/modules/_menu.scss
@@ -1,6 +1,6 @@
 .menu {
   padding-left: 0;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   list-style: none;
   background-color: $orange;
   text-align: center;
