--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,10 +2,13 @@
 @import "base/settings";
 @import "base/fonts";
 @import "vendor/bootstrap";
+@import "vendor/glider";
 @import "base/general";
 @import "base/forms";
 @import "base/button";
 @import "base/custom-control";
 @import "modules/header";
 @import "modules/menu";
+@import "modules/main-info";
+@import "modules/services";
 
