Created footer block

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@
 @import "modules/menu";
 @import "modules/main-info";
 @import "modules/services";
+@import "modules/footer";
 
 .content {
   padding: 15px 15px 5px;
