--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -1,7 +1,6 @@
 .header {
   padding-top: 16px;
   padding-bottom: 15px;
-  display: flex;
 }
 
 .header-logo {
@@ -24,51 +23,24 @@
 
 .header-logo__title {
   margin-bottom: 5px;
-  font-size: 24px;
   line-height: 1;
 }
 
 .header-logo__text {
-  font-size: 20px;
   line-height: 1.3;
 }
 
 .header-info {
-  margin-left: auto;
-  display: flex;
-  flex-direction: column;
-}
-
-.header-support {
-  margin-bottom: 12px;
-  align-self: flex-end;
   display: flex;
 }
 
 .header-support__contact {
-  margin-right: 45px;
   line-height: 1;
   text-align: right;
 }
 
 .header-support__contact-phone {
-  margin-bottom: 5px;
   font-size: 18px;
-  display: inline-block;
-
-  &:hover {
-    text-decoration: none;
-    color: $black;
-
-    .header-support__contact-phone--code {
-      color: inherit;
-    }
-  }
-}
-
-.header-support__contact-phone--code {
-  color: $gray-900;
-  transition: color .4s;
 }
 
 .header-support__contact-address {
@@ -133,10 +105,6 @@
   margin-right: auto;
 }
 
-.header-form {
-  display: flex;
-}
-
 .header-form__group {
   width: 200px;
   margin-right: 30px;
@@ -144,4 +112,114 @@
 
 .header-form__btn {
   width: 110px;
+}
+
+@media (min-width: 768px) {
+  .header {
+    display: flex;
+  }
+  .header-info {
+    margin-left: auto;
+    flex-direction: column;
+  }
+  .header-support__contact-phone {
+    margin-bottom: 5px;
+    display: inline-block;
+
+    &:hover {
+      text-decoration: none;
+      color: $black;
+
+      .header-support__contact-phone--code {
+        color: inherit;
+      }
+    }
+  }
+  .header-support__contact-phone--code {
+    color: $gray-900;
+    transition: color .4s;
+  }
+  .header-toggle {
+    display: none;
+  }
+}
+
+@media (min-width: 992px) {
+  .header-support,
+  .header-form {
+    display: flex;
+  }
+  .header-support__contact {
+    margin-right: 45px;
+  }
+  .header-support {
+    margin-bottom: 12px;
+    align-self: flex-end;
+  }
+}
+
+@media (min-width: 1200px) {
+  .header-logo__title {
+    font-size: 24px;
+  }
+  .header-logo__text {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .header-logo__title {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 991px) {
+  .header-social {
+    justify-content: flex-end;
+  }
+  .header-form {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .header-support__contact-address,
+  .header-social {
+    display: none;
+  }
+  .header-info {
+    height: 40px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background-color: $orange;
+    align-items: center;
+  }
+  .header-support__contact-phone--code {
+    color: #fff;
+  }
+  .header-toggle {
+    padding-left: 34px;
+    margin-right: auto;
+    position: relative;
+    font-size: 18px;
+    color: #fff;
+
+    &::before {
+      width: 26px;
+      height: 3px;
+      top: 50%;
+      left: 0;
+      margin-top: -2px;
+      position: absolute;
+      background-color: #fff;
+      box-shadow: 0 7px 0 #fff, 0 -7px 0 #fff;
+      content: '';
+    }
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .header-support__contact {
+    margin-bottom: 12px;
+  }
 }
