--- a/src/styles/modules/_menu.scss
+++ b/src/styles/modules/_menu.scss
@@ -1,19 +1,11 @@
+.nav-wrap {
+  transition: transform .3s ease-out;
+}
+
 .menu {
   padding-left: 0;
   margin-bottom: 10px;
   list-style: none;
-  background-color: $orange;
-  text-align: center;
-}
-
-.menu-item {
-  color: #fff;
-  border-right: 1px solid transparent;
-  flex-grow: 1;
-
-  &:not(:last-child) {
-    border-right-color: #fff;
-  }
 }
 
 .menu-link {
@@ -22,17 +14,79 @@
   display: block;
   text-transform: uppercase;
   font-weight: 700;
-  transition: background-color .4s;
+}
 
-  &:hover {
-    color: #fff;
-    background-color: $gray-900;
+.nav-close {
+  width: 30px;
+  height: 30px;
+  top: 15px;
+  right: -12%;
+  text-indent: 999px;
+  position: absolute;
+  pointer-events: none;
+  visibility: hidden;
+
+  &::before,
+  &::after {
+    position: absolute;
+    background-color: $orange;
+    transform: rotate(45deg);
+    content: '';
+  }
+
+  &::before {
+    width: 26px;
+    height: 3px;
+    top: 50%;
+    left: 2px;
+    margin-top: -1px;
+  }
+
+  &::after {
+    height: 26px;
+    width: 3px;
+    left: 50%;
+    top: 2px;
+    margin-left: -1px;
+  }
+}
+
+.menu-opened {
+  &::before,
+  .nav-close {
+    visibility: visible;
+  }
+
+  .nav-wrap {
+    transform: translateX(0);
   }
 }
 
 @media (min-width: 768px) {
   .menu {
+    text-align: center;
+    background-color: $orange;
     display: flex;
+  }
+  .menu-item {
+    color: #fff;
+    border-right: 1px solid transparent;
+    flex-grow: 1;
+
+    &:not(:last-child) {
+      border-right-color: #fff;
+    }
+  }
+  .menu-link {
+    transition: background-color .4s;
+
+    &:hover {
+      color: #fff;
+      background-color: $gray-900;
+    }
+  }
+  .nav-close {
+    display: none;
   }
 }
 
@@ -49,11 +103,31 @@
 }
 
 @media (max-width: 767px) {
-  .menu {
+  body::before {
     width: 100%;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 24;
+    visibility: hidden;
+    background-color: rgba($black, .25);
+    content: '';
+  }
+
+  .nav-wrap {
+    width: 85%;
+    height: 100%;
+    padding: 15px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 25;
+    background-color: #fff;
     transform: translateX(-100%);
+  }
+
+  .menu-item {
+    border-bottom: 1px solid $orange;
   }
 }
