--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -1,5 +1,8 @@
 .btn {
   height: 34px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 14px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -17,9 +20,12 @@
 .btn-primary {
   padding-top: 6px;
   padding-bottom: 5px;
-  text-transform: uppercase;
   border-color: $gray-900;
   background-color: $gray-900;
+}
+
+.btn-secondary {
+  background-color: $orange;
 }
 
 @media (min-width: 1100px) {
@@ -29,6 +35,15 @@
     &:hover {
       background-color: $orange;
       border-color: $orange;
+      color: #fff;
+    }
+  }
+  .btn-secondary {
+    transition: background-color .4s, border .4s;
+
+    &:hover {
+      background-color: $gray-900;
+      border-color: $gray-900;
       color: #fff;
     }
   }
