--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -8,19 +8,19 @@ h4, .h4, h5, .h5, h6, .h6 {
 }
 
 h1, .h1 {
-  font-size: 20px;
+  font-size: 26px;
 }
 
 h2, .h2 {
-  font-size: 19px;
+  font-size: 22px;
 }
 
 h3, .h3 {
-  font-size: 18px;
+  font-size: 19px;
 }
 
 h4, .h4 {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 img {
@@ -57,6 +57,52 @@ a:focus {
   list-style: none;
 }
 
+.list-check-item,
+.squared-list-item {
+  padding-left: 30px;
+  position: relative;
+
+  &::before {
+    width: 6px;
+    height: 12px;
+    position: absolute;
+    border: 1px solid;
+    border-top-width: 0;
+    border-left-width: 0;
+    transform: rotate(43deg);
+    content: '';
+  }
+}
+
+.list-check-item::before {
+  top: 8px;
+  left: 6px;
+}
+
+.squared-list-item {
+  &:not(:last-child) {
+    margin-bottom: 3px;
+  }
+
+  &::before {
+    top: 7px;
+    left: 7px;
+    z-index: 1;
+    border-color: #fff;
+  }
+
+  &::after {
+    width: 19px;
+    height: 19px;
+    position: absolute;
+    top: 5px;
+    left: 0;
+    background-color: $orange;
+    content: '';
+  }
+}
+
+
 @media (min-width: 576px) {
   h1, .h1, h2, .h2, h3, .h3,
   h4, .h4, h5, .h5, h6, .h6 {
@@ -64,6 +110,7 @@ a:focus {
     line-height: 1.4;
   }
   h1, .h1 {
+    margin-bottom: 18px;
     font-size: 36px;
   }
 
