--- a/src/styles/modules/_video-section.scss
+++ b/src/styles/modules/_video-section.scss
@@ -11,3 +11,9 @@
   color: #fff;
   background-color: #9d9a9d;
 }
+
+@media (max-width: 991px) {
+  .video-section .col-sm-6 {
+    margin-bottom: 15px;
+  }
+}
