--- a/src/styles/modules/_page-info.scss
+++ b/src/styles/modules/_page-info.scss
@@ -5,23 +5,12 @@
   font-size: 18px;
 }
 
-.aside-title {
-  padding-top: 19px;
-  margin-bottom: 18px;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 1.3;
-  text-align: center;
-}
-
 .page-info__title {
   margin-bottom: 6px;
   font-size: 18px;
 }
 
 .page-info-box {
-  margin-bottom: 34px;
-
   a {
     border-bottom: 1px solid;
     color: inherit;
@@ -34,6 +23,32 @@
   }
 }
 
-.page-info-box__title {
-  margin-bottom: 2px;
+@media (min-width: 1200px) {
+  .page-info-box__title {
+    margin-bottom: 2px;
+  }
+  .page-info-box {
+    margin-bottom: 34px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .page-info-box__title {
+    margin-bottom: 5px;
+    line-height: 1.3;
+  }
+  .page-info-box {
+    margin-bottom: 10px;
+
+    .list-check,
+    .squared-list {
+      line-height: 1.4
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .page-info-box .list-check {
+    margin-bottom: 15px;
+  }
 }
