--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,3 +20,9 @@
 @import "modules/schedule";
 @import "modules/info-links";
 @import "modules/video-section";
+
+@media (min-width: 576px) {
+  .show-xs {
+    display: none;
+  }
+}
