--- a/src/styles/modules/_info-links.scss
+++ b/src/styles/modules/_info-links.scss
@@ -1,10 +1,10 @@
 .info-links {
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .info-links-item,
 .info-links-write {
-  width: 100%;
   padding-left: 5px;
   padding-right: 5px;
   height: 40px;
@@ -14,8 +14,23 @@
   font-size: 13px;
 }
 
+@media (min-width: 576px) {
+  .info-links-item,
+  .info-links-write {
+    width: 100%;
+  }
+}
+
 @media (max-width: 991px) {
   .info-links-item {
     margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 575px) {
+  .info-links-item,
+  .info-links-write {
+    width: 80%;
+
   }
 }
