--- a/src/styles/modules/_schedule.scss
+++ b/src/styles/modules/_schedule.scss
@@ -1,5 +1,4 @@
 .schedule-box {
-  padding: 15px 20px;
   background-color: #efefef;
 }
 
@@ -11,14 +10,11 @@
 }
 
 .schedule-box__text {
-  margin-bottom: 12px;
   line-height: 1.3;
 }
 
 .schedule-box__bottom {
   font-weight: 700;
-  padding-top: 10px;
-  border-top: 1px solid #fff;
 }
 
 .schedule-box__dist {
@@ -27,17 +23,55 @@
     transition: color .4s;
   }
 
-  .schedule-box__title {
-    text-align: left;
-  }
-
   .schedule-box__bottom {
     text-align: center;
   }
 }
 
+@media (min-width: 576px) {
+  .schedule-box {
+    padding: 15px 20px;
+  }
+  .schedule-box__bottom {
+    padding-top: 10px;
+    border-top: 1px solid #fff;
+  }
+  .schedule-box__text {
+    margin-bottom: 12px;
+  }
+  .schedule-box__dist .schedule-box__title {
+    text-align: left;
+  }
+}
+
 @media (min-width: 992px) {
   .schedule {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 575px) {
+  .schedule {
+    margin-bottom: 20px
+  }
+  .schedule-box {
+    margin-bottom: 14px;
+    padding: 8px 10px 10px;
+  }
+  .schedule-box__dist {
+    .schedule-box__text {
+      text-align: center;
+    }
+
+    .schedule-box__bottom {
+      padding-top: 8px;
+      font-size: 18px;
+    }
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991px) {
+  .schedule-box {
     margin-bottom: 30px;
   }
 }
@@ -57,11 +91,5 @@
   }
   .schedule-box__dist .schedule-box__title {
     font-size: 17px;
-  }
-}
-
-@media (max-width: 991px) {
-  .schedule-box {
-    margin-bottom: 30px;
   }
 }
