--- a/src/styles/modules/_content.scss
+++ b/src/styles/modules/_content.scss
@@ -3,12 +3,20 @@
   font-weight: 700;
 }
 
+.content-main {
+  padding-left: 0;
+  padding-right: 7px;
+}
+
 .content-aside {
+  float: right;
+  padding-right: 0;
+  padding-left: 23px;
   position: relative;
 }
 
 .content-aside__title {
-  padding-top: 19px;
+  padding-top: 10px;
   font-weight: 700;
   text-transform: uppercase;
   line-height: 1.3;
@@ -61,7 +69,11 @@
 }
 
 @media (min-width: 576px) {
+  .content-aside {
+    margin-bottom: 28px;
+  }
   .content {
+    min-height: 400px;
     padding: 15px 15px 5px;
     background-color: #fff;
   }
@@ -78,7 +90,7 @@
 
 @media (min-width: 1200px) {
   .content-aside__title {
-    margin-bottom: 18px;
+    margin-bottom: 20px;
   }
 }
 
